完成前端推荐部分

--- a/souceCode/RSS_Front/pages/index/index.wxml
+++ b/souceCode/RSS_Front/pages/index/index.wxml
@@ -1,3 +1,5 @@
+<import src="../templates/recommend/item_recommend_list.wxml"/>
+
 <!--index.wxml-->
   <!--分类栏-->
     <scroll-view scroll-y="true" class="scroll_left">
@@ -11,6 +13,7 @@
 
     <!--首页(推荐)时的展示界面-->
     <view class="view_right {{choose_status == 0 ? '': 'hide'}}">
+    
       <!--推荐页面中的滚动展示栏-->
       <swiper class="swiper" indicator-dots="true" autoplay="true" interval="5000" duration="1000">    
         <block wx:for="{{recommend_circly}}" wx:for-index="index">    
@@ -20,7 +23,19 @@
         </block>  
       </swiper>
 
-      <!---->
+      <!--每日推荐-->
+      <view class="header">
+        <text class='text_recommend'>- 每日推荐 -</text> 
+      </view>
+
+      <!--推荐的菜品内容-->
+      <view class="layout_horizontal">
+
+        <block wx:for="{{recommend_list}}">
+          <template is="item" data="{{item}}"/>
+        </block>
+
+      </view>
 
     </view>
 
