--- a/souceCode/RSS_Front/pages/index/index.wxss
+++ b/souceCode/RSS_Front/pages/index/index.wxss
@@ -1,3 +1,5 @@
+@import "../templates/recommend/item_recommend_list.wxss";
+
 /* pages/classification.wxss */
 .nav_left{  
   height: 100%;
@@ -69,4 +71,15 @@
 
 .hide {
   display: none
+}
+
+.layout_horizontal{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  padding-top: 20rpx;
+  flex-wrap: wrap;
 }
