--- a/souceCode/RSS_Front/pages/index/index.wxml
+++ b/souceCode/RSS_Front/pages/index/index.wxml
@@ -1,4 +1,5 @@
 <import src="../templates/recommend/item_recommend_list.wxml"/>
+<import src="../templates/menu/item_menu.wxml"/>
 
 <!--index.wxml-->
   <!--分类栏-->
@@ -18,7 +19,7 @@
       <swiper class="swiper" indicator-dots="true" autoplay="true" interval="5000" duration="1000">    
         <block wx:for="{{recommend_circly}}" wx:for-index="index">    
           <swiper-item>    
-            <image src="{{item.pic_url}}" class="slide-image" mode="aspectFill"/>    
+            <image src="{{item.pic_url}}" class="picture_index" mode="aspectFill"/>    
           </swiper-item>    
         </block>  
       </swiper>
@@ -41,6 +42,12 @@
 
     
     <!--点击下面任意一一级菜单时的展示界面-->
-    <view id='menu_view'>
+    <view class="view_right {{choose_status == 0 ? 'hide': ''}}">
+      <block wx:for="{{food_list}}" >
 
+        <view class="container_template">
+          <template is="item-menu" data="{{item}}"/>
+        </view>
+
+      </block>
     </view>
