--- a/souceCode/RSS_Front/pages/templates/menu/item_menu.wxss
+++ b/souceCode/RSS_Front/pages/templates/menu/item_menu.wxss
@@ -1,11 +1,14 @@
-.item_recommend{
-  width: 100%;
-  height: 100%;
+.item_menu{
+  width: 50%;
+  height: 50%;
 }
 
-.box_recommend{
-  height: 230rpx;
-  width: 250rpx;
+.picture_menu{
+  width: 100%;
+}
+
+.box_menu{
+  width: 100%;
   display: flex;
   flex-direction: column;
 
@@ -13,10 +16,10 @@
 
   margin-left: 10rpx;
   margin-right: 10rpx;
-  margin-bottom: 30rpx;
+  margin-bottom: 10rpx;
 }
 
-.box_info_recommend{
+.box_info_menu{
   height: 20rpx;
   width: 100%;
 
