--- a/souceCode/RSS_Front/pages/quickService/quickService.wxml
+++ b/souceCode/RSS_Front/pages/quickService/quickService.wxml
@@ -1,13 +1,6 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<view class="container" style='margin-left : 50rpx; margin-right : 50rpx;'>
+  <van-button type="info" size="large" class='button_quickService'>快捷点餐</van-button>
+  <van-button type="info" size="large" class='button_quickService'>呼叫服务员</van-button>
+  <van-button type="info" size="large" class='button_quickService'>投诉</van-button>
 </view>
