--- a/souceCode/RSS_Front/pages/cart/cart.wxml
+++ b/souceCode/RSS_Front/pages/cart/cart.wxml
@@ -1,13 +1,29 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<view class="container" style='padding: 0;'>
+  <scroll-view style='height:100%;'>
+      <block wx:for="{{food_cart}}">
+        <view style='margin:10rpx'>
+
+          <van-card
+          num="{{item.num}}"
+          price="{{item.price}}"
+          desc="{{item.desc}}"
+          title="{{item.name}}"
+          thumb="{{ item.pic_url }}"
+          >
+            <view slot="footer" style='padding:10rpx'>
+              <van-button size="mini" round="true" style='margin-right:5rpx;'>-</van-button>
+              <van-button size="mini" round="true" style='margin-left:5rpx;'>+</van-button>
+            </view>
+
+          </van-card>
+        </view>
+      </block>
+  </scroll-view>
+
+  <van-submit-bar
+    price="{{ 3050 }}"
+    button-text="提交订单"
+    bind:submit="onSubmit"
+  />
 </view>
