--- a/souceCode/RSS_Front/pages/cart/cart.wxss
+++ b/souceCode/RSS_Front/pages/cart/cart.wxss
@@ -1,21 +1,14 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+/* 购物车卡片以及选择框容器 */
+.container_card{
+  margin: 20rpx
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.card{
+  width: 100%;
 }
 
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.container_checkout{
+  width: 100%;
 }
