--- a/souceCode/RSS/src/main/resources/templates/console/menu.html
+++ b/souceCode/RSS/src/main/resources/templates/console/menu.html
@@ -1,59 +1,77 @@
-<!DOCTYPE html>
+ <div>
+     <nav class="navbar-default navbar-side" role="navigation">
+            <div class="sidebar-collapse">
+                <ul class="nav" id="main-menu">
+                    <!--管理员信息-->
+                    <li>
+                        <div style="display: table; width: auto; margin-left: auto;margin-right: auto">
 
-<!--活动管理-->
-<li>
-    <a><i class="fa fa-sitemap"></i> 活动管理<span class="fa arrow"></span></a>
-    <ul class="nav nav-second-level collapse in" aria-expanded="true">
-        <!--推荐菜品-->
-        <li>
-            <a href="/admin/recommendManagement">推荐菜品管理</a>
-        </li>
+                            <img src="/style/images/avtar.png">
 
-        <!--优惠信息-->
-        <li>
-            <a href="/admin/preferenceManagement" >优惠信息管理</a>
-        </li>
+                        </div>
+                        <br>
+                    </li>
 
-        <!--轨迹统计图表_小时-->
-        <li>
-            <a href="/admin/recommendManagement">积分优惠信息管理</a>
-        </li>
-    </ul>
-</li>
+                    <li>
+                        <a><i class="fa fa-sitemap"></i> 活动管理<span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse in" aria-expanded="true">
+                            <!--推荐菜品-->
+                            <li>
+                                <a href="/admin/recommendManagement">推荐菜品管理</a>
+                            </li>
 
-<!--人员管理-->
-<li>
-    <a><i class="fa fa-sitemap"></i> 人员管理<span class="fa arrow"></span></a>
-    <ul class="nav nav-second-level collapse in" aria-expanded="true">
-        <!--用户信息-->
-        <li>
-            <a href="/admin/userManagement">用户信息</a>
-        </li>
+                            <!--优惠信息-->
+                            <li>
+                                <a href="/admin/preferenceManagement" >优惠信息管理</a>
+                            </li>
 
-        <!--服务员管理-->
-        <li>
-            <a href="/admin/waiterMenuManagement" >服务员管理</a>
-        </li>
+                            <!--轨迹统计图表_小时-->
+                            <li>
+                                <a href="/admin/recommendManagement">积分优惠信息管理</a>
+                            </li>
+                        </ul>
+                    </li>
 
-        <!--厨师管理-->
-        <li>
-            <a href="/admin/cookerManagement" class="active-menu-item">厨师管理</a>
-        </li>
-    </ul>
-</li>
+                    <!--人员管理-->
+                    <li>
+                        <a><i class="fa fa-sitemap"></i> 人员管理<span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse in" aria-expanded="true">
+                            <!--用户信息-->
+                            <li>
+                                <a href="/admin/userManagement">用户信息</a>
+                            </li>
 
-<!--菜单管理 -->
-<li>
-    <a><i class="fa fa-sitemap"></i> 人员管理<span class="fa arrow"></span></a>
-    <ul class="nav nav-second-level collapse in" aria-expanded="true">
-        <!--一级菜单管理-->
-        <li>
-            <a href="/admin/menuManagement">一级菜单管理</a>
-        </li>
+                            <!--服务员管理-->
+                            <li>
+                                <a href="/admin/waiterMenuManagement" >服务员管理</a>
+                            </li>
 
-        <!--菜品管理-->
-        <li>
-            <a href="/admin/foodManagement" >菜品管理</a>
-        </li>
-    </ul>
-</li>
+                            <!--厨师管理-->
+                            <li>
+                                <a href="/admin/cookerManagement" class="active-menu-item">厨师管理</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <!--菜单管理 -->
+                    <li>
+                        <a><i class="fa fa-sitemap"></i> 人员管理<span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse in" aria-expanded="true">
+                            <!--一级菜单管理-->
+                            <li>
+                                <a href="/admin/menuManagement">一级菜单管理</a>
+                            </li>
+
+                            <!--菜品管理-->
+                            <li>
+                                <a href="/admin/foodManagement" >菜品管理</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </nav>
+ </div>
