--- a/souceCode/RSS/src/main/resources/templates/console/menu.html
+++ b/souceCode/RSS/src/main/resources/templates/console/menu.html
@@ -12,58 +12,59 @@
                         <br>
                     </li>
 
-                    <li>
+                    <!--活动管理-->
+                    <li class="primaryMenu">
                         <a><i class="fa fa-sitemap"></i> 活动管理<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse in" aria-expanded="true">
+                        <ul class="nav nav-second-level collapse" aria-expanded="false" style="height: 0px;">
                             <!--推荐菜品-->
-                            <li>
+                            <li class="secondaryMenu">
                                 <a href="/admin/recommendManagement">推荐菜品管理</a>
                             </li>
 
                             <!--优惠信息-->
-                            <li>
+                            <li class="secondaryMenu">
                                 <a href="/admin/preferenceManagement" >优惠信息管理</a>
                             </li>
 
                             <!--轨迹统计图表_小时-->
-                            <li>
+                            <li class="secondaryMenu">
                                 <a href="/admin/recommendManagement">积分优惠信息管理</a>
                             </li>
                         </ul>
                     </li>
 
                     <!--人员管理-->
-                    <li>
+                    <li class="primaryMenu">
                         <a><i class="fa fa-sitemap"></i> 人员管理<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse in" aria-expanded="true">
+                        <ul class="nav nav-second-level collapse" aria-expanded="false" style="height: 0px;">
                             <!--用户信息-->
-                            <li>
+                            <li class="secondaryMenu">
                                 <a href="/admin/userManagement">用户信息</a>
                             </li>
 
                             <!--服务员管理-->
-                            <li>
+                            <li class="secondaryMenu">
                                 <a href="/admin/waiterMenuManagement" >服务员管理</a>
                             </li>
 
                             <!--厨师管理-->
-                            <li>
-                                <a href="/admin/cookerManagement" class="active-menu-item">厨师管理</a>
+                            <li class="secondaryMenu">
+                                <a href="/admin/cookerManagement">厨师管理</a>
                             </li>
                         </ul>
                     </li>
 
                     <!--菜单管理 -->
-                    <li>
+                    <li class="primaryMenu">
                         <a><i class="fa fa-sitemap"></i> 人员管理<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse in" aria-expanded="true">
+                        <ul class="nav nav-second-level collapse" aria-expanded="false" style="height: 0px;">
                             <!--一级菜单管理-->
-                            <li>
+                            <li class="secondaryMenu">
                                 <a href="/admin/menuManagement">一级菜单管理</a>
                             </li>
 
                             <!--菜品管理-->
-                            <li>
+                            <li class="secondaryMenu">
                                 <a href="/admin/foodManagement" >菜品管理</a>
                             </li>
                         </ul>
