更新了管理员前端加载菜单的方法，将方法集成到custom-script中

--- a/souceCode/RSS/src/main/resources/templates/console/activityManagement/discountManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/activityManagement/discountManagement.html
@@ -144,48 +144,7 @@
 
         <!--加载侧栏菜单-->
         <script>
-            $.ajax({
-                url : '/admin/getMenu',
-                type : 'GET',
-                dataType : 'html',
-                async:false,
-                success : function(res){
-
-                    console.log(res);
-                    $("#nave_side").append( $(res).find('nav') );
-                },
-
-                fail : function (res) {
-
-                },
-
-                timeout : function (res) {
-
-                }
-            });
-
-            //获取确认当前界面
-            var url = window.location.pathname;
-
-            var paths = url.split("/");
-            var presentPath = paths[paths.length-1]
-
-            //添加隐藏效果
-            var primaryMenus = $("#nave_side").find('.primaryMenu');
-            var menuNum = getPrimaryMenuNumber(presentPath);
-
-            var primaryMenu = primaryMenus.get(menuNum.primaryMenuNumber);
-
-            //展开一级菜单
-            setTimeout(function () {
-                $(primaryMenu).find("a")[0].click();
-            }, 10);
-
-            var secondaryMenus = $(primaryMenu).find('li');
-
-            var secondaryMenu = secondaryMenus.get(menuNum.secondaryMenu);
-
-            $(secondaryMenu).addClass("active-menu-item")
+            loadMenu();
         </script>
     </div>
 
