--- a/souceCode/RSS/src/main/resources/templates/console/menu.html
+++ b/souceCode/RSS/src/main/resources/templates/console/menu.html
@@ -28,7 +28,7 @@
 
                             <!--轨迹统计图表_小时-->
                             <li class="secondaryMenu">
-                                <a href="/admin/recommendManagement">积分优惠信息管理</a>
+                                <a href="/admin/discountManagement">积分优惠信息管理</a>
                             </li>
                         </ul>
                     </li>
@@ -44,7 +44,7 @@
 
                             <!--服务员管理-->
                             <li class="secondaryMenu">
-                                <a href="/admin/waiterMenuManagement" >服务员管理</a>
+                                <a href="/admin/waiterManagement" >服务员管理</a>
                             </li>
 
                             <!--厨师管理-->
@@ -56,7 +56,7 @@
 
                     <!--菜单管理 -->
                     <li class="primaryMenu">
-                        <a><i class="fa fa-sitemap"></i> 人员管理<span class="fa arrow"></span></a>
+                        <a><i class="fa fa-sitemap"></i> 菜单管理<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse" aria-expanded="false" style="height: 0px;">
                             <!--一级菜单管理-->
                             <li class="secondaryMenu">
